# papers

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  codecov.yml  dodo.py  hubconf.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lint.txt  requirements-pytorch-rtd.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.ci/: install.sh
.github/: failed_schedule_issue_template.md
.github/actions/setup-dev-env/: action.yml
.github/workflows/: docs.yml  gha-env-vars.yml  lint.yml  main.yml  publish.yml  publishable.yml  test.yml  tests-download.yml  tests.yml
docs/: generate_requirements_rtd.py  requirements-rtd.txt
docs/source/: .gitignore  conf.py  custom_cmds.tex  index.rst  references.bib
docs/source/api/: index.rst  pystiche_papers.data.rst  pystiche_papers.gatys_ecker_bethge_2015.rst  pystiche_papers.gatys_ecker_bethge_2016.rst  pystiche_papers.gatys_et_al_2017.rst  pystiche_papers.johnson_alahi_li_2016.rst  pystiche_papers.li_wand_2016.rst  pystiche_papers.ulyanov_et_al_2016.rst  pystiche_papers.utils.rst
pystiche_papers/: __about__.py  __init__.py  __version__
pystiche_papers/data/: __init__.py  nprgeneral.py  utils.py
pystiche_papers/gatys_ecker_bethge_2015/: __init__.py  _data.py  _loss.py  _nst.py  _utils.py  core.py  data.py  loss.py  utils.py
pystiche_papers/gatys_ecker_bethge_2016/: _data.py  _loss.py  _nst.py  _utils.py
pystiche_papers/gatys_et_al_2017/: _data.py  _loss.py  _nst.py  _pyramid.py  _utils.py  core.py  data.py  loss.py  pyramid.py  utils.py
pystiche_papers/johnson_alahi_li_2016/: _data.py  _loss.py  _modules.py  _nst.py  _utils.py  core.py  data.py  loss.py  model_urls.csv  modules.py  utils.py
pystiche_papers/li_wand_2016/: __init__.py  _data.py  _loss.py  _nst.py  _pyramid.py  _utils.py  core.py  data.py  loss.py  pyramid.py  utils.py
pystiche_papers/sanakoyeu_et_al_2018/: __init__.py  _augmentation.py  _data.py  _discriminator.py  _loss.py  _modules.py  _nst.py  _transformer.py  _utils.py  model_urls.csv
pystiche_papers/ulyanov_et_al_2016/: __init__.py  _data.py  _loss.py  _modules.py  _nst.py  _utils.py  core.py  data.py  loss.py  modules.py  utils.py
pystiche_papers/utils/: __init__.py  cuda.py  hyper_params.py  misc.py  modules.py  transforms.py
replication/gatys_ecker_bethge_2015/: main.py
replication/gatys_ecker_bethge_2016/: main.py
replication/gatys_et_al_2017/: main.py
replication/johnson_alahi_li_2016/: README.md  download_images.py  luatorch_to_pytorch.py  main.py  stylization.py  training.py  utils.py
replication/li_wand_2016/: main.py
replication/sanakoyeu_et_al_2018/: .gitignore  README.md  main.py  tensorflow_to_pytorch.py
replication/ulyanov_et_al_2016/: main.py
rescience_paper/: .gitignore  README.md  article.tex  bibliography.bib  content.tex  download.py  header.tex  metadata.yaml  nst_images_script.py  preamble.tex
rescience_paper/bib/: bibliography.bib
rescience_paper/chapters/: acknowledgements.tex  discussion.tex  methology.tex  reproducibility.tex
rescience_paper/graphics/nst/: example_images.tex
rescience_paper/sections/: acknowledgements.tex  appendix.tex  conclusion.tex  discussion.tex  introduction.tex  methology.tex  preliminaries.tex  replicated_Paper.tex  results.tex
tests/: _asserts.py  _fixtures.py  _utils.py  asserts.py  conftest.py  fixtures.py  mocks.py  parametrize.py  test_data.py  test_gatys_ecker_bethge_2015.py  test_gatys_et_al_2017.py  test_johnson_alahi_li_2016.py  test_li_wand_2016.py  test_smoke.py  test_ulyanov_et_al_2016.py  test_utils.py  utils.py
tests/_assets/: __init__.py
tests/_assets/images/: generate.py
tests/assets/: __init__.py
tests/assets/images/: generate.py  versions.txt
tests/data/: nprgeneral.py  test_nprgeneral.py
tests/download/: asserts.py  test_data.py  test_gatys_ecker_bethge_2016.py  test_gatys_et_al_2017.py  test_images.py  test_johnson_alahi_li_2016.py  test_li_wand_2016.py  test_ulyanov_et_al_2016.py  utils.py
tests/download/data/: test_nprgeneral.py
tests/download/hub/: conftest.py  test_hub.py  test_johnson_alahi_li_2016.py  test_sanakoyeu_et_al_2018.py
tests/download/paper/: test_gatys_ecker_bethge_2016.py  test_gatys_et_al_2017.py  test_johnson_alahi_li_2016.py  test_li_wand_2016.py  test_sanakoyeu_et_al_2018.py  test_ulyanov_et_al_2016.py
tests/gatys_ecker_bethge_2015/: __init__.py  conftest.py  test_core.py  test_data.py  test_loss.py  test_nst.py  test_utils.py
tests/gatys_et_al_2017/: conftest.py  test_core.py  test_data.py  test_loss.py  test_nst.py  test_utils.py
tests/hub/: conftest.py  test_hub.py  test_johnson_alahi_li_2016.py
tests/johnson_alahi_li_2016/: conftest.py  test_core.py  test_data.py  test_loss.py  test_modules.py  test_nst.py  test_utils.py
tests/li_wand_2016/: conftest.py  test_core.py  test_data.py  test_loss.py  test_nst.py  test_pyramid.py  test_utils.py
tests/replication/: asserts.py  conftest.py  test_gatys_ecker_bethge_2015.py  test_gatys_ecker_bethge_2016.py  test_gatys_et_al_2017.py  test_johnson_alahi_li_2016.py  test_li_wand_2016.py  test_sanakoyeu_et_al_2018.py  test_ulyanov_et_al_2016.py  utils.py
tests/ulyanov_et_al_2016/: conftest.py  test_core.py  test_data.py  test_loss.py  test_modules.py  test_nst.py  test_utils.py
tests/unit/: test_smoke.py
tests/unit/data/: test_nprgeneral.py  test_utils.py
tests/unit/gatys_ecker_bethge_2015/: conftest.py  test_data.py  test_nst.py  test_utils.py
tests/unit/gatys_ecker_bethge_2016/: conftest.py  test_data.py  test_loss.py  test_nst.py  test_utils.py
tests/unit/gatys_et_al_2017/: conftest.py  test_data.py  test_loss.py  test_nst.py  test_pyramid.py  test_utils.py
tests/unit/johnson_alahi_li_2016/: conftest.py  test_data.py  (+4 more)
tests/utils/: test_cuda.py  test_misc.py  test_modules.py
(+29 files in other folders)
