[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See link below for available options
# https://github.com/pypa/setuptools_scm/#configuration-parameters

write_to = "pystiche_papers/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.isort]
# See link below for available options
# https://github.com/timothycrosley/isort/wiki/isort-Settings#full-reference-of-isort-settings

skip = [
  ".git",
  ".github",
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "docs/build",
]
line_length = 88
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true

known_third_party = ["numpy", "pytest"]
known_pytorch = ["pytorch_testing_utils", "torch", "torchvision"]
known_first_party = ["pystiche", "pystiche_papers"]
sections= ["FUTURE", "STDLIB", "THIRDPARTY", "PYTORCH", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
# See link below for available options
# https://github.com/psf/black#configuration-format

line-length = 88
target-version = ["py36"]
exclude = '''
/(
    \.git
  | \.github
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
  | docs/build
)/
'''
