[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See https://github.com/pypa/setuptools_scm/#configuration-parameters for available
# options

write_to = "pystiche_papers/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.usort]

categories = ["future", "standard_library", "third_party", "pytorch", "first_party"]
first_party_detection = false

[tool.usort.known]

third_party = ["numpy", "pytest"]
pytorch = ["pytorch_testing_utils", "torch", "torchvision"]
first_party = ["pystiche", "pystiche_papers"]

[tool.black]
# See https://black.readthedocs.io/en/stable/usage_and_configuration/index.html for
# available options

target-version = ["py37"]

[tool.check-wheel-contents]
# See https://github.com/jwodder/check-wheel-contents/issues/2
ignore = "W002"
