[metadata]
name = pystiche_papers
platforms = any
description = Reference implementation and replication of prominent NST papers
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = python, neural-style-transfer, pytorch, pystiche, reference-implementation, replication
url = https://github.com/pmeier/pystiche_papers
author = Philip Meier, Julian Bültemeier
author-email = github.pmeier@posteo.de
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
project_urls =
    Source = https://github.com/pmeier/pystiche_papers
    Tracker = https://github.com/pmeier/pystiche_papers/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pystiche == 0.6
    torch == 1.6
    torchvision == 0.7
    more_itertools >= 2.1

[options.packages.find]
exclude =
    tests
    tests.*
